# sap_sync

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/: auth.h  hash.h  protocol.h  sync_types.h
src/: auth.cpp  hash.cpp  protocol.cpp
tests/: CMakeLists.txt  sync_tests.cpp
